# MultiThreaded-MapReduce

./: CMakeLists.txt  Makefile  MapReduceFramework.cpp  README  hu.cpp
